# chopd

./: .gitignore  .prettierignore  README.md  config-loader.test.js  example.chopin.config.json  index.js  index.test.js  package-lock.json  package.json  schema-version.test.js  schema.json  test-runner.js  test-server.js  versions.json
experimental-rust-cli/: Cargo.toml  README.md
experimental-rust-cli/src/: app.rs  config.rs  main.rs  proxy.rs  tui.rs
schemas/: schema_0.1.0.json  schema_test.json
scripts/: bump-chopd-version.js  bump-schema-version.js  test-bump.js  test-chopd-bump.js
src/: app.js
src/commands/: index.js  init.js
src/middleware/: auth.js  request-queue.js
src/routes/: chopin.js
src/utils/: args.js  config.js  process-manager.js
