[package]
name = "chopd-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust port of the chopd proxy server with TUI interface"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1.5"
cookie = "0.18"
config = "0.14"
jsonschema = "0.17"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
http = "1.0"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5" 